--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.android.support:design:23.2.1'
 
 
     // injection
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.jakewharton:kotterknife:0.1.0-SNAPSHOT'
 
     // ReactiveX
     compile 'io.reactivex:rxjava:1.1.1'
