--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".mvp.view.settings.SettingsActivity"/>
+
     </application>
 
 </manifest>
