About Activity added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
 
         <activity android:name=".mvp.view.settings.SettingsActivity"/>
 
+        <activity android:name=".mvp.view.about.AboutActivity"/>
+
     </application>
 
 </manifest>
